--- a/CPP_test/CPP_test.vcxproj
+++ b/CPP_test/CPP_test.vcxproj
@@ -145,6 +145,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="CustomTextRenderer.h" />
+    <ClInclude Include="define.h" />
     <ClInclude Include="Error.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
